name:                advent
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/farrellm/advent#readme
license:             BSD3
license-file:        LICENSE
author:              Matthew Farrell
maintainer:          farrellm@alum.mit.edu
copyright:           2016 Matthew Farrell
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Day5
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , classy-prelude
                     , containers
                     , cryptohash
                     , lens
                     , linear
                     , mtl
                     , microlens-platform
                     , text-format
                     , vector
  default-language:    Haskell2010

executable advent
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , advent
  default-language:    Haskell2010

test-suite advent-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , advent
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/farrellm/advent
